<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lyt"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D6E0E8"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/lblPantalla"
        android:layout_width="330dp"
        android:layout_height="76dp"
        android:text="@string/pantalla"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.809" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="324dp"
        android:layout_height="493dp"
        android:layout_marginBottom="16dp"
        android:paddingTop="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#00FF5722"
                android:minHeight="90dip"
                android:onClick="clickNumeros"
                android:text="@string/siete"
                android:textColor="#FF5722"
                android:textSize="34sp" />

            <Button
                android:id="@+id/btn8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#00FF5722"
                android:minHeight="90dip"
                android:onClick="clickNumeros"
                android:text="@string/ocho"
                android:textColor="#FF5722"
                android:textSize="34sp" />

            <Button
                android:id="@+id/btn9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#00FF5722"
                android:minHeight="90dip"
                android:onClick="clickNumeros"
                android:text="@string/nueve"
                android:textColor="#FF5722"
                android:textSize="34sp" />

            <Button
                android:id="@+id/btnMas"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#004CAF50"
                android:enabled="false"
                android:minHeight="90dip"
                android:onClick="clickSignos"
                android:text="@string/mas"
                android:textColor="#4CAF50"
                android:textSize="34sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="79dp">

            <Button
                android:id="@+id/btn4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#00FF5722"
                android:minHeight="90dip"
                android:onClick="clickNumeros"
                android:text="@string/cuatro"
                android:textColor="#FF5722"
                android:textSize="34sp" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#00FF5722"
                android:minHeight="90dip"
                android:onClick="clickNumeros"
                android:text="@string/cinco"
                android:textColor="#FF5722"
                android:textSize="34sp" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#00FF5722"
                android:minHeight="90dip"
                android:onClick="clickNumeros"
                android:text="@string/seis"
                android:textColor="#FF5722"
                android:textSize="34sp" />

            <Button
                android:id="@+id/btnPor"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#004CAF50"
                android:enabled="false"
                android:minHeight="90dip"
                android:onClick="clickSignos"
                android:text="@string/mult"
                android:textColor="#4CAF50"
                android:textSize="34sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#00FF5722"
                android:minHeight="90dip"
                android:onClick="clickNumeros"
                android:text="@string/uno"
                android:textColor="#FF5722"
                android:textSize="34sp" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#00FF5722"
                android:minHeight="90dip"
                android:onClick="clickNumeros"
                android:text="@string/dos"
                android:textColor="#FF5722"
                android:textSize="34sp" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#00FF5722"
                android:minHeight="90dip"
                android:onClick="clickNumeros"
                android:text="@string/tres"
                android:textColor="#FF5722"
                android:textSize="34sp" />

            <Button
                android:id="@+id/btnDiv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#004CAF50"
                android:enabled="false"
                android:minHeight="90dip"
                android:onClick="clickSignos"
                android:text="@string/dividir"
                android:textColor="#4CAF50"
                android:textSize="34sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnClear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#00673AB7"
                android:minHeight="90dip"
                android:onClick="clear"
                android:text="@string/refresh"
                android:textColor="#03A9F4"
                android:textSize="34sp" />

            <Button
                android:id="@+id/btn0"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#00FF5722"
                android:minHeight="90dip"
                android:onClick="clickNumeros"
                android:text="@string/cero"
                android:textColor="#FF5722"
                android:textSize="34sp" />

            <Button
                android:id="@+id/btnPunto"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#003F51B5"
                android:enabled="true"
                android:minHeight="90dip"
                android:onClick="clickPunto"
                android:text="@string/punto"
                android:textColor="#03A9F4"
                android:textSize="34sp" />

            <Button
                android:id="@+id/btnMenos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#004CAF50"
                android:enabled="false"
                android:minHeight="90dip"
                android:onClick="clickSignos"
                android:text="@string/menos"
                android:textColor="#4CAF50"
                android:textSize="34sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnIgual"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:backgroundTint="#00FFC107"
                android:enabled="false"
                android:minHeight="90dip"
                android:onClick="mostrarResultado"
                android:text="@string/igual"
                android:textColor="#673AB7"
                android:textSize="34sp"
                app:strokeColor="#673AB7"
                app:strokeWidth="3dp" />

            <Button
                android:id="@+id/btnCambioSigno"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#004CAF50"
                android:enabled="false"
                android:minHeight="90dip"
                android:onClick="clickCambioSigno"
                android:text="@string/btnCambioSigno"
                android:textColor="#4CAF50"
                android:textSize="24sp" />

        </TableRow>
    </TableLayout>

    <Switch
        android:id="@+id/switchN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="cambiarModoNocturno"
        android:text="Light"
        android:textColor="#342544"
        app:layout_constraintBottom_toTopOf="@+id/lblPantalla"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.095"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.391" />

</androidx.constraintlayout.widget.ConstraintLayout>